--- a/three/1/style.css
+++ b/three/1/style.css
@@ -2,3 +2,12 @@
   padding: 0;
   margin: 0;
 }
+
+#app {
+  color: white;
+  position: absolute;
+  font-size: 70px;
+  font-family: sans-serif;
+  top: 50px;
+  left: 50px;
+}
